[package]
name = "zebes-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Core logic for the Zebes NES emulator."
readme = "README.md"
keywords = ["nes", "emulator", "6502"]
categories = ["emulators"]
publish = false

[dependencies]
